# vala

./: configure.ac
codegen/: valaccodebasemodule.vala
libvaladoc/: Makefile.am
libvaladoc/api/: package.vala
vala/: valagirparser.vala
valadoc/: Makefile.am
valadoc/doclets/devhelp/: Makefile.am
valadoc/doclets/gtkdoc/: Makefile.am
valadoc/doclets/html/: Makefile.am
valadoc/tests/: Makefile.am  testrunner.sh
valadoc/tests/drivers/: generic-api-test.vala
